devops/restapi-deploy.yaml
# restapi-deploy.yaml
#
# !!! Please make sure the target folder in Worker Node exists !!!
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restapi-dp
  labels:
    app: nestjs
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restapi
    matchExpressions:
      - {key: tier, operator: In, values: [backend]}
  template:
    metadata:
      name: restapi-pod
      labels:
        app: restapi
        tier: backend
    spec:
      containers:
      - name: restapi-container
        image: chriswei/restapi
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          hostPort: 3000
          protocol: TCP
