devops/frontend-svc-ci.yaml
# frontend-svc-ci.yaml
#
# !!! Please make sure the target folder in Worker Node exists !!!
#
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  labels:
    app: frontend
    tier: frontend
spec:
  selector:
    app: frontend
    tier: frontend
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
