devops/frontend.yaml
# !!! Please make sure the target folder in Worker Node exists !!!

# ------------------- Deployment ------------------- #

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dp
  labels:
    app: simpleproxy
    tier: frontend
  annotations:
    kubernetes.io/change-cause: "Release Version 0.0.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simpleproxy
    matchExpressions:
      - {key: tier, operator: In, values: [frontend]}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  minReadySeconds: 3
  revisionHistoryLimit: 3
  template:
    metadata:
      name: simpleproxy-pod
      labels:
        app: simpleproxy
        tier: frontend
    spec:
      containers:
      - name: simpleproxy-container
        image: chriswei/simpleproxy:0.0.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          hostPort: 80
          protocol: TCP

# ------------------- NodePort Service ------------------- #

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc-np
  labels:
    app: simpleproxy
    tier: frontend
spec:
  selector:
    app: simpleproxy
    tier: frontend
  type: NodePort
  ports:
    - nodePort: 30880
      port: 80
      targetPort: 80
