devops/restapi-svc-ci.yaml
# backend-svc-ci.yaml
#
# !!! Please make sure the target folder in Worker Node exists !!!
#
apiVersion: v1
kind: Service
metadata:
  name: service
  labels:
    app: restapi
    tier: backend
spec:
  selector:
    app: restapi
    tier: backend
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
