devops/restapi.yaml
# !!! Please make sure the target folder in Worker Node exists !!!

# ------------------- Deployment ------------------- #

apiVersion: apps/v1
kind: Deployment
metadata:
  name: restapi-dp
  labels:
    app: restapi
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restapi
    matchExpressions:
      - {key: tier, operator: In, values: [backend]}
  template:
    metadata:
      name: restapi-pod
      labels:
        app: restapi
        tier: backend
    spec:
      containers:
      - name: restapi-container
        image: chriswei/simpleservice
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          hostPort: 3000
          protocol: TCP

# ------------------- ClusterIP Service ------------------- #
---
apiVersion: v1
kind: Service
metadata:
  name: service
  labels:
    app: restapi
    tier: backend
spec:
  selector:
    app: restapi
    tier: backend
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
